--- a/.htaccess
+++ b/.htaccess
@@ -5,10 +5,10 @@ Allow from all
 	Allow from all
 </FilesMatch>
 
-<Files rooting.php >
+<Files routing.php >
 	Allow from all
 </Files>
 
 Options +FollowSymlinks
 RewriteEngine on
-RewriteRule (.+(?<!rooting))\.php$ /timezone/rooting.php?url=$1 [QSA] [L]
+RewriteRule (.+(?<!routing))\.php$ /timezone/routing.php?url=$1 [QSA] [L]
