--- a/.htaccess
+++ b/.htaccess
@@ -1,14 +1,18 @@
 Order deny,allow
-Allow from all
+Deny from all
 
 <FilesMatch "^.*(?<!\.php)$">
 	Allow from all
 </FilesMatch>
 
-<Files routing.php >
+<FilesMatch "^.+/[^\.]+$">
 	Allow from all
-</Files>
+</FilesMatch>
+
+<FilesMatch "routing\.php$" >
+	Allow from all
+</FilesMatch>
 
 Options +FollowSymlinks
 RewriteEngine on
-RewriteRule (.+(?<!routing))\.php$ /timezone/routing.php?url=$1 [QSA] [L]
+RewriteRule ^((.+/)*[^\.]+)$ /timezone/routing.php?url=$1 [QSA] [L]
